--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 *,
 *::after,
 *::before {
-box-sizing: border-box;
+  box-sizing: border-box;
   background-color: #F2F2F2;
-  justify-content: center; /* Centraliza horizontalmente */
-  align-items: center; /* Centraliza verticalmente */
+  justify-content: center; 
+  align-items: center; 
 }
 
 html {
   --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --font-title: Georgia, 'Times New Roman', Times, serif;
+  --font-title: 'Poppins';
   --font-size: 1.2rem;
   --color: #19f;
   --color-light: #adf;
@@ -106,4 +106,18 @@ hr {
   border: 2px solid black;
   margin: 2rem auto;
 }
-
+@media (max-width: 768px) {
+  button {
+      gap: 10px;
+      margin-bottom: 10px;
+      justify-content: center; 
+      align-items: center;
+  }
+  h1, h2, h3, h4, p, ul{
+    font-size: 1.1rem;
+    flex-wrap: wrap;
+  }
+  button{
+    font-size: 0.9rem;
+  }
+}
