--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 *::after,
 *::before {
   box-sizing: border-box;
-  background-color: #F2F2F2;
+  background-color:#f5f5f5 ;
   justify-content: center; 
   align-items: center; 
 }
@@ -10,11 +10,11 @@
 html {
   --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --font-title: 'Poppins';
+  --font-title: 'Roboto';
   --font-size: 1.2rem;
-  --color: #19f;
-  --color-light: #adf;
-  --color-dark: #018;
+  --color: #84C5DE;
+  --color-light: #3a86ff;
+  --color-dark: #0a29f5;
   --radius: 0.2rem;
 }
 
@@ -60,11 +60,11 @@ label {
 input,
 textarea {
   display: block;
-  border: 1px solid #ccc;
+  border: 1px solid #a3a3a3;
   width: 100%;
   padding: 0.8rem;
   border-radius: var(--radius);
-  background: #eee;
+  background: #cccccc;
   transition: 0.2s;
 }
 
@@ -72,7 +72,7 @@ input:focus,
 textarea:focus {
   outline: none;
   border-color: var(--color);
-  background: white;
+  background: #f5f5f5;
   box-shadow: 0 0 0 3px var(--color-light);
 }
 
@@ -103,7 +103,7 @@ button:disabled {
 }
 
 hr {
-  border: 2px solid black;
+  border: 2px solid #141414;
   margin: 2rem auto;
 }
 @media (max-width: 768px) {
